Fix duplicate group rights and resolve ID conflicts in reports

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -571,181 +571,6 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <input type="checkbox" id="reports" class="form-check-input"><label
-                                        class="checkbox-label fw-bold-label" for="reports">Reports</label>
-                                    <ul>
-                                        <li>
-                                            <input type="checkbox" id="warehouse_sales_reports"
-                                                class="form-check-input"><label class="checkbox-label"
-                                                for="warehouse_sales_reports">WH Sales Reports</label>
-                                            <ul class="list-unstyled">
-                                                <li><input type="checkbox" id="sales_report_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="sales_report_link">Sales Report</label></li>
-                                                <li><input type="checkbox" id="sales_comparison_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="sales_comparison_link">Sales Comparison</label></li>
-                                                <li><input type="checkbox" id="date_wise_sales_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="date_wise_sales_link">Date-Wise Sales</label></li>
-                                                <li><input type="checkbox" id="payment_reports_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="payment_reports_link">Payment Reports</label></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <input type="checkbox" id="warehouse_reports"
-                                                class="form-check-input"><label class="checkbox-label"
-                                                for="warehouse_reports">WH Reports</label>
-                                            <ul class="list-unstyled">
-                                                <li><input type="checkbox" id="wh_customer_ledger_rpt"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="wh_customer_ledger_rpt">WH Customer Ledger Report</label>
-                                                </li>
-                                                <li><input type="checkbox" id="wh_customer_balance_rpt"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="wh_customer_balance_rpt">WH Customer Balance Report</label>
-                                                </li>
-                                                <li><input type="checkbox" id="wh_stock_position_rpt"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="wh_stock_position_rpt">WH Stock Position</label>
-                                                </li>
-                                                <li><input type="checkbox" id="wh_item_ledger_rpt"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="wh_item_ledger_rpt">WH Item Ledger</label>
-                                                </li>
-                                                <li><input type="checkbox" id="wh_stock_activity_rpt"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="wh_stock_activity_rpt">WH Stock Activity</label>
-                                                </li>
-                                            </ul>
-                                        </li>
-
-                                        <li>
-                                            <input type="checkbox" id="shop_reports" class="form-check-input"><label
-                                                class="checkbox-label" for="shop_reports">Shop Reports</label>
-                                            <ul class="list-unstyled">
-                                                <li><input type="checkbox" id="dept_wise_report_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="dept_wise_report_link">Department-Wise Report</label></li>
-                                                <li><input type="checkbox" id="sub_dept_wise_report_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="sub_dept_wise_report_link">Sub-Department-Wise
-                                                        Report</label></li>
-                                                <li><input type="checkbox" id="dept_wise_comparison_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="dept_wise_comparison_link">Dept-Wise Sale
-                                                        Comparision</label></li>
-                                                <li><input type="checkbox" id="branch_wise_comparison_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="branch_wise_comparison_link">Branch-Wise Sale
-                                                        Comparison</label></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <input type="checkbox" id="sales_reports" class="form-check-input"><label
-                                                class="checkbox-label" for="sales_reports">Sales Reports</label>
-                                            <ul class="list-unstyled">
-                                                <li><input type="checkbox" id="dept_sale_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="dept_sale_link">Dept Wise Sale</label></li>
-                                                <li><input type="checkbox" id="cash_counter_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="cash_counter_rpt_link">Cash Counter Report</label></li>
-                                                <li><input type="checkbox" id="receipts_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="receipts_link">Customer Receipts</label></li>
-                                                <li><input type="checkbox" id="party_stmt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="party_stmt_link">Party Statement</label></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <input type="checkbox" id="emp_salary_reports"
-                                                class="form-check-input"><label class="checkbox-label"
-                                                for="emp_salary_reports">Emp Salary Reports</label>
-                                            <ul class="list-unstyled">
-                                                <li><input type="checkbox" id="emp_ledger_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="emp_ledger_rpt_link">Employee Ledger</label></li>
-                                                <li><input type="checkbox" id="emp_balances_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="emp_balances_rpt_link">Employee Balances</label>
-                                                </li>
-                                                <li><input type="checkbox" id="advance_pay_rec_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="advance_pay_rec_rpt_link">Employee Advance</label></li>
-                                                <li><input type="checkbox" id="emp_salary_detail_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="emp_salary_detail_rpt_link">Employee Salary Detail</label>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <input type="checkbox" id="purchase_reports" class="form-check-input"><label
-                                                class="checkbox-label" for="purchase_reports">Purchase Reports</label>
-                                            <ul>
-                                                <li><input type="checkbox" id="purchase_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="purchase_rpt_link">Purchase Report</label></li>
-                                                <li><input type="checkbox" id="supp_pay_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="supp_pay_link">Supplier Payments</label></li>
-                                                <li><input type="checkbox" id="supplier_tax_cert_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="supplier_tax_cert_link">Supplier WHT Certificate</label>
-                                                </li>
-                                                <li><input type="checkbox" id="supplier_tax_report_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="supplier_tax_report_link">Supplier Tax Report</label></li>
-                                                <li><input type="checkbox" id="exemption_invoices_report_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="exemption_invoices_report_link">Exemption Invoices
-                                                        Report</label></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <input type="checkbox" id="stock_reports" class="form-check-input"><label
-                                                class="checkbox-label" for="stock_reports">Stock Reports</label>
-                                            <ul>
-                                                <li><input type="checkbox" id="stock_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="stock_rpt_link">Stock Report</label></li>
-                                                <li><input type="checkbox" id="stock_adj_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="stock_adj_rpt_link">Stock Adjustments</label></li>
-                                                <li><input type="checkbox" id="stock_audit_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="stock_audit_rpt_link">Stock Audit</label></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <input type="checkbox" id="financial_reports"
-                                                class="form-check-input"><label class="checkbox-label"
-                                                for="financial_reports">Financial Reports</label>
-                                            <ul>
-                                                <li><input type="checkbox" id="pl_link" class="form-check-input"><label
-                                                        class="checkbox-label" for="pl_link">Profit & Loss</label></li>
-                                                <li><input type="checkbox" id="ledger_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="ledger_link">Ledger</label></li>
-                                                <li><input type="checkbox" id="bank_ledger_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="bank_ledger_link">Bank Ledger</label></li>
-                                                <li><input type="checkbox" id="expense_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="expense_rpt_link">Expense Report</label></li>
-                                                <li><input type="checkbox" id="income_statement"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="income_statement">Income Statement</label></li>
-                                                <li><input type="checkbox" id="vouchers_rpt_link"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="vouchers_rpt_link">Vouchers</label></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
                                     <input type="checkbox" id="bank_mgmt" class="form-check-input"><label
                                         class="checkbox-label fw-bold-label" for="bank_mgmt">Bank Management</label>
                                     <ul>
@@ -968,12 +793,12 @@
                                                 <li><input type="checkbox" id="income_statement_link"
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="income_statement_link">Income Statement</label></li>
-                                                <li><input type="checkbox" id="pv_supplier"
+                                                <li><input type="checkbox" id="pv_supplier_rpt_link"
                                                         class="form-check-input"><label class="checkbox-label"
-                                                        for="pv_supplier">Supplier Vouchers</label></li>
-                                                <li><input type="checkbox" id="pv_category"
+                                                        for="pv_supplier_rpt_link">Supplier Vouchers</label></li>
+                                                <li><input type="checkbox" id="pv_category_rpt_link"
                                                         class="form-check-input"><label class="checkbox-label"
-                                                        for="pv_category">Category Vouchers</label></li>
+                                                        for="pv_category_rpt_link">Category Vouchers</label></li>
                                             </ul>
                                         </li>
                                     </ul>
