Update: Fixed Wholesale Retail Price display issues and Salary Report print layout

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -732,6 +732,10 @@
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="emp_salary_detail_rpt_link">Employee Salary Detail</label>
                                                 </li>
+                                                <li><input type="checkbox" id="bank_paid_salary_rpt_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="bank_paid_salary_rpt_link">Bank Paid Salary Report</label>
+                                                </li>
                                             </ul>
                                         </li>
                                         <li>
