--- a/Frontend/views/employee-attendance-detail.html
+++ b/Frontend/views/employee-attendance-detail.html
@@ -258,9 +258,9 @@
         }
 
         .row-absent td {
-            background-color: #f8d7da !important;
-            /* Red */
-            color: #721c24 !important;
+            background-color: #ea1c0d !important;
+            /* Darker red */
+            color: #ffffff !important;
             font-weight: bold !important;
         }
 
